crates/hydracache-db/tests/derive/fail_missing_id.rs
use hydracache_db::HydraCacheEntity;

#[derive(HydraCacheEntity)]
#[hydracache(entity = "user")]
struct User;

fn main() {}
